--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         "It is easy to sit up and take notice, what's difficult is getting up
         and taking action."
       </p>
-      <img src="images/pattern-divider-desktop.svg" alt="" />
+      <img class="img-1" src="images/pattern-divider-desktop.svg" alt="" />
       <img class="img-2" src="images/icon-dice.svg" alt="" />
     </div>
   </body>
